--- a/Plugins/openjob.example/pom.xml
+++ b/Plugins/openjob.example/pom.xml
@@ -12,7 +12,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<jbehave.version>3.6</jbehave.version>
+		<jbehave.version>4.0-beta-2</jbehave.version>
 		<junit.version>4.10</junit.version>
 	</properties>
 
