--- a/Plugins/openjob.example/pom.xml
+++ b/Plugins/openjob.example/pom.xml
@@ -52,19 +52,20 @@
 				<groupId>org.jbehave</groupId>
 				<artifactId>jbehave-maven-plugin</artifactId>
 				<version>${jbehave.version}</version>
-				<goals>
-					<goal>run-stories-as-embeddables</goal>
-				</goals>
 				<executions>
 					<execution>
 						<id>run-stories-as-embeddables</id>
 						<phase>integration-test</phase>
+						<goals>
+							<goal>run-stories-as-embeddables</goal>
+						</goals>
 						<configuration>
 							<includes>
 								<include>**/*Scenarios.java</include>
 							</includes>
-							<ignoreFailureInStories>false</ignoreFailureInStories>
+							<ignoreFailureInStories>true</ignoreFailureInStories>
 							<ignoreFailureInView>false</ignoreFailureInView>
+							
 						</configuration>
 					</execution>
 				</executions>
@@ -77,20 +78,52 @@
 				</dependencies>
 			</plugin>
 
-			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
-				<executions> <execution> <id>unpack-jbehave-site-resources</id> <phase>generate-resources</phase> 
-				<goals> <goal>unpack</goal> </goals> <configuration> <overwriteReleases>false</overwriteReleases> 
-				<overwriteSnapshots>true</overwriteSnapshots> <artifactItems> <artifactItem> 
-				<groupId>org.jbehave.site</groupId> <artifactId>jbehave-site-resources</artifactId> 
-				<version>3.1.1</version> <type>zip</type> <outputDirectory> ${project.build.directory}/jbehave/view</outputDirectory> 
-				</artifactItem> </artifactItems> </configuration> </execution> <execution> 
-				<id>unpack-jbehave-reports-resources</id> <phase>generate-resources</phase> 
-				<goals> <goal>unpack</goal> </goals> <configuration> <overwriteReleases>false</overwriteReleases> 
-				<overwriteSnapshots>true</overwriteSnapshots> <artifactItems> <artifactItem> 
-				<groupId>org.jbehave</groupId> <artifactId>jbehave-core</artifactId> <version>${jbehave.version}</version> 
-				<outputDirectory>${project.build.directory}/jbehave/view</outputDirectory> 
-				<includes>**\/*.css,**\/*.ftl,**\/*.js</includes> </artifactItem> </artifactItems> 
-				</configuration> </execution> </executions> </plugin -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack-jbehave-site-resources</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<overwriteReleases>false</overwriteReleases>
+							<overwriteSnapshots>true</overwriteSnapshots>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.jbehave.site</groupId>
+									<artifactId>jbehave-site-resources</artifactId>
+									<version>3.1.1</version>
+									<type>zip</type>
+									<outputDirectory> ${project.build.directory}/jbehave/view</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unpack-jbehave-reports-resources</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<overwriteReleases>false</overwriteReleases>
+							<overwriteSnapshots>true</overwriteSnapshots>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.jbehave</groupId>
+									<artifactId>jbehave-core</artifactId>
+									<version>${jbehave.version}</version>
+									<outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
+									<includes>**\/*.css,**\/*.ftl,**\/*.js</includes>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
