--- a/Plugins/openjob.example/pom.xml
+++ b/Plugins/openjob.example/pom.xml
@@ -12,7 +12,8 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<jbehave.version>4.0-beta-2</jbehave.version>
+		<jbehave.version>4.0-beta-3</jbehave.version>
+		<jbehave.site.version>3.1.1</jbehave.site.version>
 		<junit.version>4.10</junit.version>
 	</properties>
 
@@ -41,11 +42,7 @@
 				<directory>src/test/resources/stories</directory>
 			</testResource>
 		</testResources>
-		<resources>
-			<resource>
-				<directory>src/test/resources</directory>
-			</resource>
-		</resources>
+
 
 		<plugins>
 			<plugin>
@@ -65,7 +62,6 @@
 							</includes>
 							<ignoreFailureInStories>true</ignoreFailureInStories>
 							<ignoreFailureInView>false</ignoreFailureInView>
-							
 						</configuration>
 					</execution>
 				</executions>
@@ -95,7 +91,7 @@
 								<artifactItem>
 									<groupId>org.jbehave.site</groupId>
 									<artifactId>jbehave-site-resources</artifactId>
-									<version>3.1.1</version>
+									<version>${jbehave.site.version}</version>
 									<type>zip</type>
 									<outputDirectory> ${project.build.directory}/jbehave/view</outputDirectory>
 								</artifactItem>
@@ -125,5 +121,65 @@
 				</executions>
 			</plugin>
 		</plugins>
+
+
+
+
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>2.3.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.4</version>
+				</plugin>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.1,)</versionRange>
+										<goals>
+											<goal>copy</goal>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.jbehave</groupId>
+										<artifactId>jbehave-maven-plugin</artifactId>
+										<versionRange>[${jbehave.core.version},)</versionRange>
+										<goals>
+											<goal>unpack-view-resources</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 	</build>
 </project>
