--- a/Plugins/openjob.example/.classpath
+++ b/Plugins/openjob.example/.classpath
@@ -23,5 +23,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/home/huluvu/.m2/repository/org/jbehave/jbehave-core/4.0-beta-3/jbehave-core-4.0-beta-3.jar" sourcepath="/home/huluvu/.m2/repository/org/jbehave/jbehave-core/4.0-beta-3/jbehave-core-4.0-beta-3-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.jbehave"/>
+			<attribute name="maven.artifactId" value="jbehave-core"/>
+			<attribute name="maven.version" value="4.0-beta-3"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
