--- a/pom.xml
+++ b/pom.xml
@@ -6,15 +6,15 @@
 	<url>http://maven.apache.org</url>
 	<modelVersion>4.0.0</modelVersion>
 	<name>openjobs</name>
-	<groupId>de.openjobs</groupId>
-	<artifactId>example</artifactId>
+	<groupId>gh.funthomas424242</groupId>
+	<artifactId>jbehave.example</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<jbehave.version>4.0-beta-3</jbehave.version>
-		<jbehave.site.version>3.1.1</jbehave.site.version>
-		<junit.version>4.10</junit.version>
+		<jbehave.version>4.0-beta-7</jbehave.version>
+		<jbehave.site.version>3.2</jbehave.site.version>
+		<junit.version>4.11</junit.version>
 	</properties>
 
 
@@ -32,17 +32,21 @@
 		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>jbehave-junit-runner</artifactId>
-			<version>1.0.1</version>
+			<version>1.1.0</version>
 		</dependency>
 	</dependencies>
 
 	<build>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources/stories</directory>
-			</testResource>
-		</testResources>
-
+ 
+        <testResources>
+          <testResource>
+             <directory>src/test/java</directory>
+             <includes>
+                 <include>**/*.story</include>
+             </includes>
+          </testResource>
+        </testResources>
+ 
 
 		<plugins>
 			<plugin>
@@ -56,6 +60,7 @@
 							<goal>run-stories-as-embeddables</goal>
 						</goals>
 						<configuration>
+                            <scope>test</scope>
 							<includes>
 								<include>**/*Scenarios.java</include>
 							</includes>
@@ -63,6 +68,7 @@
 							<ignoreFailureInView>false</ignoreFailureInView>
 						</configuration>
 					</execution>
+     <!-- 
 					<execution>
 						<id>map-stories</id>
 						<phase>integration-test</phase>
@@ -80,7 +86,9 @@
 							<goal>map-stories-as-paths</goal>
 						</goals>
 					</execution>
+      -->
 				</executions>
+    <!-- 
 				<dependencies>
 					<dependency>
 						<groupId>log4j</groupId>
@@ -88,6 +96,7 @@
 						<version>1.2.16</version>
 					</dependency>
 				</dependencies>
+     -->
 			</plugin>
 
 			<plugin>
@@ -154,6 +163,11 @@
 					<artifactId>maven-dependency-plugin</artifactId>
 					<version>2.4</version>
 				</plugin>
+                <plugin>
+                    <groupId>org.jbehave</groupId>
+                    <artifactId>jbehave</artifactId>
+                    <version>${jbehave.version}</version>
+                </plugin>
 				<plugin>
 					<groupId>org.jbehave</groupId>
 					<artifactId>jbehave-maven-plugin</artifactId>
