--- a/pom.xml
+++ b/pom.xml
@@ -1,220 +1,227 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <name>JBehave Example</name>
+    <groupId>gh.funthomas424242</groupId>
+    <artifactId>jbehave.example</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-	<url>http://maven.apache.org</url>
-	<modelVersion>4.0.0</modelVersion>
-	<name>openjobs</name>
-	<groupId>gh.funthomas424242</groupId>
-	<artifactId>jbehave.example</artifactId>
-	<packaging>jar</packaging>
-	<version>1.0-SNAPSHOT</version>
+    <url>https://github.com/FunThomas424242/jbehave.example</url>
 
-	<properties>
-		<jbehave.version>4.0-beta-7</jbehave.version>
-		<jbehave.site.version>3.2</jbehave.site.version>
-		<junit.version>4.11</junit.version>
-	</properties>
+    <issueManagement>
+        <system>trac</system>
+        <url>https://github.com/FunThomas424242/jbehave.example/issues</url>
+    </issueManagement>
 
+    <scm>
+        <connection>scm:git:https://github.com/FunThomas424242/jbehave.example.git</connection>
+        <developerConnection>scm:git:https://github.com/FunThomas424242/jbehave.example.git</developerConnection>
+        <tag>master</tag>
+        <url>https://github.com/FunThomas424242/jbehave.example</url>
+    </scm>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jbehave</groupId>
-			<artifactId>jbehave-core</artifactId>
-			<version>${jbehave.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>de.codecentric</groupId>
-			<artifactId>jbehave-junit-runner</artifactId>
-			<version>1.1.0</version>
-		</dependency>
-	</dependencies>
+    <contributors>
+        <contributor>
+            <roles>
+                <role>project-owner</role>
+                <role>developer</role>
+            </roles>
+            <email>funthomas424242@gmail.com</email>
+            <name>FunThomas424242</name>
+        </contributor>
+    </contributors>
+    <licenses>
+        <license>
+            <url>./LICENSE.txt</url>
+        </license>
+    </licenses>
 
-	<build>
- 
+    <properties>
+        <jbehave.version>4.0-beta-7</jbehave.version>
+        <jbehave.site.version>3.2</jbehave.site.version>
+        <junit.version>4.11</junit.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>${jbehave.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>jbehave-junit-runner</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+
         <testResources>
-          <testResource>
-             <directory>src/test/java</directory>
-             <includes>
-                 <include>**/*.story</include>
-             </includes>
-          </testResource>
+            <testResource>
+                <directory>src/test/java</directory>
+                <includes>
+                    <include>**/*.story</include>
+                </includes>
+            </testResource>
         </testResources>
- 
 
-		<plugins>
-			<plugin>
-				<groupId>org.jbehave</groupId>
-				<artifactId>jbehave-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>run-stories-as-embeddables</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>run-stories-as-embeddables</goal>
-						</goals>
-						<configuration>
+
+        <plugins>
+            <plugin>
+                <groupId>org.jbehave</groupId>
+                <artifactId>jbehave-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>run-stories-as-embeddables</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>run-stories-as-embeddables</goal>
+                        </goals>
+                        <configuration>
                             <scope>test</scope>
-							<includes>
-								<include>**/*Scenarios.java</include>
-							</includes>
-							<ignoreFailureInStories>true</ignoreFailureInStories>
-							<ignoreFailureInView>false</ignoreFailureInView>
-						</configuration>
-					</execution>
-     <!-- 
-					<execution>
-						<id>map-stories</id>
-						<phase>integration-test</phase>
-						<configuration>
-							<includes>
-								<include>**/stories/*.story</include>
-							</includes>
-							<metaFilters>
-								<metaFilter>+author *</metaFilter>
-								<metaFilter>theme *</metaFilter>
-								<metaFilter>-skip</metaFilter>
-							</metaFilters>
-						</configuration>
-						<goals>
-							<goal>map-stories-as-paths</goal>
-						</goals>
-					</execution>
-      -->
-				</executions>
-    <!-- 
-				<dependencies>
-					<dependency>
-						<groupId>log4j</groupId>
-						<artifactId>log4j</artifactId>
-						<version>1.2.16</version>
-					</dependency>
-				</dependencies>
-     -->
-			</plugin>
+                            <includes>
+                                <include>**/*Scenarios.java</include>
+                            </includes>
+                            <ignoreFailureInStories>true</ignoreFailureInStories>
+                            <ignoreFailureInView>false</ignoreFailureInView>
+                        </configuration>
+                    </execution>
+                    <!-- <execution> <id>map-stories</id> <phase>integration-test</phase> 
+                        <configuration> <includes> <include>**/stories/*.story</include> </includes> 
+                        <metaFilters> <metaFilter>+author *</metaFilter> <metaFilter>theme *</metaFilter> 
+                        <metaFilter>-skip</metaFilter> </metaFilters> </configuration> <goals> <goal>map-stories-as-paths</goal> 
+                        </goals> </execution> -->
+                </executions>
+                <!-- <dependencies> <dependency> <groupId>log4j</groupId> 
+                    <artifactId>log4j</artifactId> <version>1.2.16</version> </dependency> </dependencies> -->
+            </plugin>
 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>unpack-jbehave-site-resources</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<overwriteReleases>false</overwriteReleases>
-							<overwriteSnapshots>true</overwriteSnapshots>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.jbehave.site</groupId>
-									<artifactId>jbehave-site-resources</artifactId>
-									<version>${jbehave.site.version}</version>
-									<type>zip</type>
-									<outputDirectory> ${project.build.directory}/jbehave/view</outputDirectory>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-					<execution>
-						<id>unpack-jbehave-reports-resources</id>
-						<phase>generate-resources</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
-						<configuration>
-							<overwriteReleases>false</overwriteReleases>
-							<overwriteSnapshots>true</overwriteSnapshots>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.jbehave</groupId>
-									<artifactId>jbehave-core</artifactId>
-									<version>${jbehave.version}</version>
-									<outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
-									<includes>**\/*.css,**\/*.ftl,**\/*.js</includes>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>unpack-jbehave-site-resources</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <overwriteReleases>false</overwriteReleases>
+                            <overwriteSnapshots>true</overwriteSnapshots>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jbehave.site</groupId>
+                                    <artifactId>jbehave-site-resources</artifactId>
+                                    <version>${jbehave.site.version}</version>
+                                    <type>zip</type>
+                                    <outputDirectory>
+                                        ${project.build.directory}/jbehave/view</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>unpack-jbehave-reports-resources</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <overwriteReleases>false</overwriteReleases>
+                            <overwriteSnapshots>true</overwriteSnapshots>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.jbehave</groupId>
+                                    <artifactId>jbehave-core</artifactId>
+                                    <version>${jbehave.version}</version>
+                                    <outputDirectory>${project.build.directory}/jbehave/view</outputDirectory>
+                                    <includes>**\/*.css,**\/*.ftl,**\/*.js</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 
 
 
 
 
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.3.2</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
                 <plugin>
                     <groupId>org.jbehave</groupId>
                     <artifactId>jbehave</artifactId>
                     <version>${jbehave.version}</version>
                 </plugin>
-				<plugin>
-					<groupId>org.jbehave</groupId>
-					<artifactId>jbehave-maven-plugin</artifactId>
-					<version>${jbehave.version}</version>
-				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.apache.maven.plugins</groupId>
-										<artifactId>maven-dependency-plugin</artifactId>
-										<versionRange>[2.1,)</versionRange>
-										<goals>
-											<goal>copy</goal>
-											<goal>unpack</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>org.jbehave</groupId>
-										<artifactId>jbehave-maven-plugin</artifactId>
-										<versionRange>[${jbehave.core.version},)</versionRange>
-										<goals>
-											<goal>unpack-view-resources</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
+                <plugin>
+                    <groupId>org.jbehave</groupId>
+                    <artifactId>jbehave-maven-plugin</artifactId>
+                    <version>${jbehave.version}</version>
+                </plugin>
+                <!--This plugin's configuration is used to store Eclipse 
+                    m2e settings only. It has no influence on the Maven build itself. -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-dependency-plugin</artifactId>
+                                        <versionRange>[2.1,)</versionRange>
+                                        <goals>
+                                            <goal>copy</goal>
+                                            <goal>unpack</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.jbehave</groupId>
+                                        <artifactId>jbehave-maven-plugin</artifactId>
+                                        <versionRange>[${jbehave.core.version},)</versionRange>
+                                        <goals>
+                                            <goal>unpack-view-resources</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore></ignore>
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
-	</build>
+    </build>
 </project>
