Ci System added
Signed-off-by: FunThomas424242 <funthomas424242@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
         <url>https://github.com/FunThomas424242/jbehave.example/issues</url>
     </issueManagement>
 
+    <ciManagement>
+        <system>travis-ci</system>
+        <url>https://travis-ci.org/FunThomas424242/natspec-swingapp.example</url>
+    </ciManagement>
+
     <scm>
         <connection>scm:git:https://github.com/FunThomas424242/jbehave.example.git</connection>
         <developerConnection>scm:git:https://github.com/FunThomas424242/jbehave.example.git</developerConnection>
