--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ env:
   - secure: I2TyTf4/9EQALzvWSx7EwkR3blw16iSVmgL4KsFQtrrjXNKMPGuOYkWYWzSN+MfiF2uEFLSgTH+/vFwGUq0Mvi9nebbvwogz8hYeJqtsomU+6Rch4ppoWc3oDRfiRiUlQYhT2Ua2vH9wzfUcUBMM85GZNeG4+ws/SccsBa+ZmBw=
   - secure: ivSvaSRwFSezwK3yvlZgjVeTT2ie+Faj4wGySef22quy12Izp1PaqlDiwctcJvnubqD8DkjAUjHKRlA3H4exlRluEiN8L+EV6A8Jg0XfWsxjzJPhoI6x9s3xwlyRZbnCemL27bZmdSPu87/qjkPgMb8vtF5gsRJjpaU7mdM/3IU=
   
-language: java
+# language: java
 jdk:
-- openjdk7
+  - openjdk7
 script:
-- mvn -Premote clean install
+  - mvn -Premote clean install
+ 
